--- a/case-converter/style.css
+++ b/case-converter/style.css
@@ -26,10 +26,19 @@ body {
     height: 100vh;
 }
 
+
+#container {
+    padding: 32px 64px;
+    /*margin: 20px;*/
+}
+
 textarea {
     width: 50vw;
     height: 30vh;
     background-color: #D2E5ED;
+    tab-size: 20px;
+    padding: 10px;
+    font-size: 30px;
 }
 
 .indigo-dye {
@@ -48,11 +57,13 @@ h1 {
 
 .open-window {
     height:60px;
-    width:180px;
+    width:150px;
     font-size: 100%;
     border-radius: 6px;
     border: 0;
     cursor: pointer;
+    margin: 2px 0;
+    padding: 5px;
 }
 
 
