--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 * {
     font-family: Inter, sans-serif;
-    min-font-size: 16px;
+    font-size: 1.05rem;
+    letter-spacing: .5px;
+    line-height: 1.5;
     margin: 0;
     padding: 0;
     /*box-sizing: border-box;*/
@@ -70,6 +73,7 @@ header a {
 #about > div.indigo-dye {
     border-radius: 12px;
     margin: 2%;
+    max-width: 40%;
     flex-shrink: 2;
 }
 
