text-shadow to the logo and new project cofee machine

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 * {
     font-family: Inter, sans-serif;
-    font-size: 1.05rem;
-    letter-spacing: .5px;
     line-height: 1.5;
     margin: 0;
     padding: 0;
@@ -14,7 +12,7 @@
 }
 
 .honolulu-blue {
-    background-color: #61A5C2;
+    background-color: #61A5C2; /*light blue*/
 }
 
 /*html {*/
@@ -40,7 +38,11 @@
 /*    text-align: end;*/
 /*    padding: 1em 2em;*/
 /*    font-size: 1.5em;*/
-/*}*/
+.logo a{
+    text-shadow: 4px 2px 2px #61A5C2, 4px 2px 6px black;
+    font-size: 1.5em;
+    text-decoration: none;
+}
 
 a {
     color: black;
