--- a/src/style.css
+++ b/src/style.css
@@ -62,31 +62,24 @@ header a {
 #about {
     display: flex;
     justify-content: center;
-    /*flex-wrap: wrap;*/
-    max-height: 60%;
 }
 
-#about  div {
+#about div {
     border-radius: 12px;
-    margin: 2%;
-    flex-shrink: 1;
- }
-
-#about > div.indigo-dye {
-    border-radius: 12px;
-    margin: 2%;
-    max-width: 40%;
     flex-shrink: 2;
+    margin: 2% 2% 2% 2%;
+    padding: 2% 2%;
 }
 
-#about > div > img{
+#about img {
     border-radius: 12px;
-    max-width: 100%;
-    max-height: 100%;
+    height: 30%;
+    margin: 2%;
+    width: 30%;
 }
 
-#about > div > div{
-    padding: 0 2%;
+.box-shadow {
+    box-shadow: 0px 0px 10px 1px black;
 }
 
 h2 {
